--- a/cfg/tracktor.yaml
+++ b/cfg/tracktor.yaml
@@ -6,7 +6,7 @@ tracktor:
   width: 960
   height: 720
   interpolate: True
-  write_images: false
+  write_images: False
   tracker:
     # FRCNN score threshold for detections
     detection_person_thresh: 0.5
@@ -18,14 +18,14 @@ tracktor:
     regression_nms_thresh: 0.6
     # motion model settings
     motion_model:
-      enabled: False
+      enabled: True
       # average velocity over last n_steps steps
       n_steps: 1
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
     # 0 tells the tracker to use private detections (Faster R-CNN)
-    public_detections: True
+    public_detections: False
     # How much last appearance features are to keep
     max_features_num: 10
     # Do camera motion compensation
