--- a/cfg/tracktor.yaml
+++ b/cfg/tracktor.yaml
@@ -1,11 +1,11 @@
 tracktor:
-  backbone: resnet50
-  num_ID: 1129
+  backbone: resnet101
+  num_ID: 126
   version: 'v1'
-  weights: ../weights/training/1/resnet50_img_size640_480/latest.pt
+  weights: ../weights/training/1/resnet101_img_size960_540/latest.pt
   dataset: ./data/track/train
-  width: 640
-  height: 480
+  width: 960
+  height: 540
   interpolate: True
   write_images: False
   tracker:
@@ -38,7 +38,7 @@ tracktor:
     # Threshold increment between two iterations (original 0.001)
     termination_eps: 0.00001
     # Use siamese network to do reid
-    do_reid: True
+    do_reid: False
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
