--- a/cfg/tracktor.yaml
+++ b/cfg/tracktor.yaml
@@ -19,9 +19,9 @@ tracktor:
     regression_nms_thresh: 0.6
     # motion model settings
     motion_model:
-      enabled: True
+      enabled: False
       # average velocity over last n_steps steps
-      n_steps: 1
+      n_steps: 5
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
@@ -42,6 +42,6 @@ tracktor:
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
-    reid_sim_threshold: 1.0
+    reid_sim_threshold: 0.5
     # How much IoU do track and image need to be considered for matching
     reid_iou_threshold: 0.1
