--- a/cfg/tracktor.yaml
+++ b/cfg/tracktor.yaml
@@ -3,7 +3,7 @@ tracktor:
   num_ID: 126
   version: 'v1'
   weights: ../weights/training/1/resnet50_img_size1920_1080/latest.pt
-  dataset: ./data/track/train
+  dataset: ./data/track/val
   width: 1920
   height: 1080
   interpolate: True
@@ -40,8 +40,8 @@ tracktor:
     # Use siamese network to do reid
     do_reid: True
     # How much timesteps dead tracks are kept and cosidered for reid
-    inactive_patience: 10
+    inactive_patience: 20
     # How similar do image and old track need to be to be considered the same person
-    reid_sim_threshold: 0.5
+    reid_sim_threshold: 0.2
     # How much IoU do track and image need to be considered for matching
-    reid_iou_threshold: 0.1
+    reid_iou_threshold: 0
