--- a/cfg/resnet50_img_size800_450/tracktor.yaml
+++ b/cfg/resnet50_img_size800_450/tracktor.yaml
@@ -2,24 +2,24 @@ tracktor:
   backbone: resnet50
   num_ID: 510
   version: 'v1'
-  weights: ../weights/training/3/resnet50_img_size1920_1080/latest.pt
+  weights: ../weights/training/3/resnet50_img_size800_450/latest.pt
   dataset: ./data/track/val
-  width: 1920
-  height: 1080
+  width: 800
+  height: 450
   interpolate: True
   write_images: False
   tracker:
     # FRCNN score threshold for detections
-    detection_person_thresh: 0.5
+    detection_person_thresh: 0.9
     # FRCNN score threshold for keeping the track alive
-    regression_person_thresh: 0.5
+    regression_person_thresh: 0.6
     # NMS threshold for detection
     detection_nms_thresh: 0.3
     # NMS theshold while tracking
     regression_nms_thresh: 0.6
     # motion model settings
     motion_model:
-      enabled: True
+      enabled: False
       # average velocity over last n_steps steps
       n_steps: 5
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
@@ -38,10 +38,10 @@ tracktor:
     # Threshold increment between two iterations (original 0.001)
     termination_eps: 0.00001
     # Use siamese network to do reid
-    do_reid: True
+    do_reid: False
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
-    reid_sim_threshold: 3
+    reid_sim_threshold: 8
     # How much IoU do track and image need to be considered for matching
     reid_iou_threshold: 0.1
