--- a/cfg/tracktor_resnet50_800_450.yaml
+++ b/cfg/tracktor_resnet50_800_450.yaml
@@ -10,16 +10,16 @@ tracktor:
   write_images: False
   tracker:
     # FRCNN score threshold for detections
-    detection_person_thresh: 0.9
+    detection_person_thresh: 0.95
     # FRCNN score threshold for keeping the track alive
-    regression_person_thresh: 0.6
+    regression_person_thresh: 0.9
     # NMS threshold for detection
-    detection_nms_thresh: 0.3
+    detection_nms_thresh: 0.5
     # NMS theshold while tracking
-    regression_nms_thresh: 0.6
+    regression_nms_thresh: 0.5
     # motion model settings
     motion_model:
-      enabled: False
+      enabled: True
       # average velocity over last n_steps steps
       n_steps: 5
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
@@ -38,10 +38,10 @@ tracktor:
     # Threshold increment between two iterations (original 0.001)
     termination_eps: 0.00001
     # Use siamese network to do reid
-    do_reid: False
+    do_reid: True
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
-    reid_sim_threshold: 8
+    reid_sim_threshold: 10
     # How much IoU do track and image need to be considered for matching
     reid_iou_threshold: 0.1
