--- a/cfg/tracktor_resnet50_800_450.yaml
+++ b/cfg/tracktor_resnet50_800_450.yaml
@@ -3,7 +3,7 @@ tracktor:
   num_ID: 510
   version: 'v1'
   weights: ../weights/training/mot16/resnet50_img_size800_450/latest.pt
-  dataset: ./data/track/val
+  dataset: /data/dgw/dataset/MOT16/train
   width: 800
   height: 450
   interpolate: True
@@ -19,14 +19,14 @@ tracktor:
     regression_nms_thresh: 0.5
     # motion model settings
     motion_model:
-      enabled: True
+      enabled: False
       # average velocity over last n_steps steps
       n_steps: 5
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
     # 0 tells the tracker to use private detections (Faster R-CNN)
-    public_detections: False
+    public_detections: True
     # How much last appearance features are to keep
     max_features_num: 10
     # Do camera motion compensation
@@ -38,7 +38,7 @@ tracktor:
     # Threshold increment between two iterations (original 0.001)
     termination_eps: 0.00001
     # Use siamese network to do reid
-    do_reid: False
+    do_reid: True
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
