--- a/cfg/tracktor_resnet50_640_360.yaml
+++ b/cfg/tracktor_resnet50_640_360.yaml
@@ -3,25 +3,25 @@ tracktor:
   num_ID: 510
   version: 'v1'
   weights: ../weights/training/mot16/resnet50_img_size640_360/latest.pt
-  dataset: ./data/track/val
+  dataset: ./data/track/train+val
   width: 640
   height: 360
   interpolate: True
   write_images: False
   tracker:
     # FRCNN score threshold for detections
-    detection_person_thresh: 0.975
+    detection_person_thresh: 0.95
     # FRCNN score threshold for keeping the track alive
     regression_person_thresh: 0.9
     # NMS threshold for detection
-    detection_nms_thresh: 0.6
+    detection_nms_thresh: 0.5
     # NMS theshold while tracking
-    regression_nms_thresh: 0.4
+    regression_nms_thresh: 0.5
     # motion model settings
     motion_model:
-      enabled: False
+      enabled: True
       # average velocity over last n_steps steps
-      n_steps: 5
+      n_steps: 1
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
@@ -42,6 +42,6 @@ tracktor:
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
-    reid_sim_threshold: 10
+    reid_sim_threshold: 11
     # How much IoU do track and image need to be considered for matching
     reid_iou_threshold: 0.1
