--- a/cfg/tracktor_resnet50_800_450.yaml
+++ b/cfg/tracktor_resnet50_800_450.yaml
@@ -3,7 +3,7 @@ tracktor:
   num_ID: 510
   version: 'v1'
   weights: ../weights/training/mot16/resnet50_img_size800_450/latest.pt
-  dataset: /data/dgw/dataset/MOT16/train
+  dataset: ./data/track/train+val
   width: 800
   height: 450
   interpolate: True
@@ -19,9 +19,9 @@ tracktor:
     regression_nms_thresh: 0.5
     # motion model settings
     motion_model:
-      enabled: False
+      enabled: True
       # average velocity over last n_steps steps
-      n_steps: 5
+      n_steps: 1
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
@@ -42,6 +42,6 @@ tracktor:
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
-    reid_sim_threshold: 10
+    reid_sim_threshold: 11
     # How much IoU do track and image need to be considered for matching
     reid_iou_threshold: 0.1
