--- a/cfg/tracktor_resnet50_960_540.yaml
+++ b/cfg/tracktor_resnet50_960_540.yaml
@@ -3,7 +3,7 @@ tracktor:
   num_ID: 510
   version: 'v1'
   weights: ../weights/training/mot16/resnet50_img_size1120_630/latest.pt
-  dataset: ./data/track/train+val
+  dataset: ./data/track/try
   width: 960
   height: 540
   len_embed: 256
