--- a/cfg/test_tracktor.yaml
+++ b/cfg/test_tracktor.yaml
@@ -1,11 +1,12 @@
 tracktor:
   backbone: resnet50
-  num_ID: 510
+  num_ID: 1443
   version: 'v1'
-  weights: ../weights/training/3/resnet50_img_size800_450/latest.pt
-  dataset: /data/dgw/dataset/MOT16/test
-  width: 800
-  height: 450
+  weights: ../weights/training/all/resnet50_img_size960_600/latest.pt
+  dataset: ./data/track/val
+  len_embed: 1024
+  width: 960
+  height: 540
   interpolate: True
   write_images: False
   tracker:
@@ -21,7 +22,7 @@ tracktor:
     motion_model:
       enabled: True
       # average velocity over last n_steps steps
-      n_steps: 5
+      n_steps: 1
       # if true, only model the movement of the bounding box center. If false, width and height are also modeled.
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
