--- a/cfg/test_tracktor.yaml
+++ b/cfg/test_tracktor.yaml
@@ -2,18 +2,18 @@ tracktor:
   backbone: resnet50
   num_ID: 1443
   version: 'v1'
-  weights: ../weights/training/all/resnet50_img_size960_600/latest.pt
-  dataset: ./data/track/train+val
+  weights: ../weights/training/all/resnet50_img_size1120_630/latest.pt
+  dataset: ./data/track/train
   len_embed: 1024
-  width: 960
-  height: 540
+  width: 1120
+  height: 630
   interpolate: True
   write_images: False
   tracker:
     # FRCNN score threshold for detections
-    detection_person_thresh: 0.9
+    detection_person_thresh: 0.95
     # FRCNN score threshold for keeping the track alive
-    regression_person_thresh: 0.8
+    regression_person_thresh: 0.9
     # NMS threshold for detection
     detection_nms_thresh: 0.5
     # NMS theshold while tracking
