--- a/cfg/test_tracktor.yaml
+++ b/cfg/test_tracktor.yaml
@@ -3,7 +3,7 @@ tracktor:
   num_ID: 1443
   version: 'v1'
   weights: ../weights/training/all/resnet50_img_size1120_630/latest.pt
-  dataset: ./data/track/try
+  dataset: ./data/track/train
   len_embed: 1024
   width: 1120
   height: 630
@@ -27,7 +27,7 @@ tracktor:
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
     # 0 tells the tracker to use private detections (Faster R-CNN)
-    public_detections: False
+    public_detections: True
     # How much last appearance features are to keep
     max_features_num: 10
     # Do camera motion compensation
