--- a/cfg/test_tracktor.yaml
+++ b/cfg/test_tracktor.yaml
@@ -5,8 +5,8 @@ tracktor:
   weights: ../weights/training/all/resnet50_img_size1120_630/latest.pt
   dataset: ./data/track/train
   len_embed: 1024
-  width: 1120
-  height: 630
+  width: 1920
+  height: 1080
   interpolate: True
   write_images: False
   tracker:
@@ -27,7 +27,7 @@ tracktor:
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
     # 0 tells the tracker to use private detections (Faster R-CNN)
-    public_detections: False
+    public_detections: True
     # How much last appearance features are to keep
     max_features_num: 10
     # Do camera motion compensation
