--- a/cfg/test_tracktor.yaml
+++ b/cfg/test_tracktor.yaml
@@ -3,7 +3,7 @@ tracktor:
   num_ID: 1443
   version: 'v1'
   weights: ../weights/training/all/resnet50_img_size1120_630/latest.pt
-  dataset: ./data/track/try
+  dataset: ./data/track/2DMOT15/test
   len_embed: 1024
   width: 1120
   height: 630
@@ -11,11 +11,11 @@ tracktor:
   write_images: False
   tracker:
     # FRCNN score threshold for detections
-    detection_person_thresh: 0.7
+    detection_person_thresh: 0.8
     # FRCNN score threshold for keeping the track alive
-    regression_person_thresh: 0.6
+    regression_person_thresh: 0.7
     # NMS threshold for detection
-    detection_nms_thresh: 0.6
+    detection_nms_thresh: 0.5
     # NMS theshold while tracking
     regression_nms_thresh: 0.5
     # motion model settings
@@ -27,7 +27,7 @@ tracktor:
       center_only: True
     # DPM or DPM_RAW or 0, raw includes the unfiltered (no nms) versions of the provided detections,
     # 0 tells the tracker to use private detections (Faster R-CNN)
-    public_detections: False
+    public_detections: True
     # How much last appearance features are to keep
     max_features_num: 10
     # Do camera motion compensation
@@ -39,7 +39,7 @@ tracktor:
     # Threshold increment between two iterations (original 0.001)
     termination_eps: 0.00001
     # Use siamese network to do reid
-    do_reid: True
+    do_reid: False
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
