--- a/cfg/test_tracktor.yaml
+++ b/cfg/test_tracktor.yaml
@@ -3,7 +3,7 @@ tracktor:
   num_ID: 1443
   version: 'v1'
   weights: ../weights/training/all/resnet50_img_size1120_630/latest.pt
-  dataset: ./data/track/2DMOT15/test
+  dataset: ./data/track/MOT16/train
   len_embed: 1024
   width: 1120
   height: 630
@@ -11,9 +11,9 @@ tracktor:
   write_images: False
   tracker:
     # FRCNN score threshold for detections
-    detection_person_thresh: 0.8
+    detection_person_thresh: 0.95
     # FRCNN score threshold for keeping the track alive
-    regression_person_thresh: 0.7
+    regression_person_thresh: 0.9
     # NMS threshold for detection
     detection_nms_thresh: 0.5
     # NMS theshold while tracking
@@ -39,7 +39,7 @@ tracktor:
     # Threshold increment between two iterations (original 0.001)
     termination_eps: 0.00001
     # Use siamese network to do reid
-    do_reid: False
+    do_reid: True
     # How much timesteps dead tracks are kept and cosidered for reid
     inactive_patience: 10
     # How similar do image and old track need to be to be considered the same person
